Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50669

Function name is missing when printing javascript function

    XMLWordPrintable

Details

    • 20b376b64a11b4bda18aa1abda543586f04688e8

    Description

      Code such as:

      function F(){}
      console.log(F.toString())
      

      Will output:

      qml: function() { [code] }
      

      How ever, this states that it needs FunctionDeclaration that includes Identifier, which seems to be missing in current output:
      http://www.ecma-international.org/ecma-262/5.1/#sec-15.3.4.2

      Attachments

        For Gerrit Dashboard: QTBUG-50669
        # Subject Branch Project Status CR V

        Activity

          People

            mitch_curtis Mitch Curtis
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes