Print function identifier when calling toString() on a function

Task-number: QTBUG-50669
Change-Id: Ia0e9491b12ca1db1da2bfa8eb5ca8bbe4658f699
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>